--- a/index.html
+++ b/index.html
@@ -3,15 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V57 Website</title>
+    <title>Venture57 Design</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is the V57 website created on Sep 29</h1>
+    <header>
+        <div class="container">
+            <img src="images/logotest.png" alt="Venture57 Logo" class="logo">
+            <h1>Venture57 Design</h1>
+            <p>Handcrafted woodworking products</p>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <h2>Our Products</h2>
+            <p>Explore our handcrafted woodworking creations — perfect for gifts and home decor.</p>
+        </section>
+
+        <section>
+            <h2>About Us</h2>
+            <p>Venture57 Design is a small New Jersey business specializing in quality woodworking designs that combine creativity and craftsmanship.</p>
+        </section>
+
+        <section>
+            <h2>Contact</h2>
+            <p>Email: info@v57design.com</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Venture57 Design. All rights reserved.</p>
+    </footer>
 </body>
 </html>
-
-
-
-
-
-
