--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="images/logotest.png" alt="Venture57 Logo" class="logo">
+            <img src="images/LogoTest.png" alt="Venture57 Logo" class="logo">
             <h1>Venture57 Design</h1>
             <p>Handcrafted woodworking products</p>
         </div>
