--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <main>
         <section>
             <h2>Our Products</h2>
-            <p>Explore our handcrafted woodworking creations — perfect for gifts and home decor.</p>
+            <p>Check out our woodworking creations — perfect for gifts and home decor.</p>
         </section>
 
         <section>
             <h2>About Us</h2>
-            <p>Venture57 Design is a small New Jersey business specializing in quality woodworking designs that combine creativity and craftsmanship.</p>
+            <p>Venture57 Design is a New Jersey based business specializing in quality woodworking designs that combine creativity and craftsmanship.</p>
         </section>
 
         <section>
