--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         <div class="container">
             <img src="images/LogoTest.png" alt="Venture57 Logo Goes HERE NOW!!!" class="logo">
             <h1>Venture57 Design</h1>
-            <p>Handcrafted woodworking products</p>
+            <p>Handcrafted Woodworking Products</p>
         </div>
     </header>
 
     <main>
         <section>
             <h2>Our Products</h2>
-            <p>Check out our woodworking creations — perfect for gifts and home decor.</p>
+            <p>See our custom made woodworking creations — perfect for gifts and home decor.</p>
         </section>
 
         <section>
             <h2>About Us</h2>
-            <p>Venture57 Design is a New Jersey based business specializing in quality woodworking designs that combine creativity and craftsmanship.</p>
+            <p>Venture57 Design is a New Jersey based business specializing in Creative Designs and Quality Craftsmanship.</p>
         </section>
 
         <section>
