Added Hero Banner index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <img src="images/LogoTest.png" alt="Venture57 Logo Goes HERE NOW!!!" class="logo">
-            <h1>Venture57 Design</h1>
-            <p>Handcrafted Woodworking Products</p>
-        </div>
-    </header>
+<header>
+  <div class="container">
+    <img src="images/LogoTest.png" alt="Venture57 Logo" class="logo">
+    <h1>Venture57 Design</h1>
+    <p>Handcrafted Woodworking Products</p>
+  </div>
+
+  <!-- HERO BANNER SECTION -->
+  <picture class="hero-banner">
+    <!-- Mobile: up to 600px -->
+    <source media="(max-width: 600px)" srcset="images/Banner-mobile.jpg">
+    <!-- Tablet: 601px to 1024px -->
+    <source media="(max-width: 1024px)" srcset="images/Banner-tablet.jpg">
+    <!-- Desktop: 1025px and up -->
+    <img src="images/Banner-desktop.jpg" alt="Venture57 Design handcrafted woodworking hero image">
+  </picture>
+</header>
 
     <main>
         <section>
