--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 </head>
 <body>
 <header>
-  <div class="container">
-    <img src="images/LogoTest.png" alt="Venture57 Logo" class="logo">
-    <h1>Venture57 Design</h1>
-    <p>Handcrafted Woodworking Products</p>
-  </div>
-
   <!-- HERO BANNER SECTION -->
   <picture class="hero-banner">
     <!-- Mobile: up to 600px -->
@@ -21,7 +15,10 @@
     <!-- Tablet: 601px to 1024px -->
     <source media="(max-width: 1024px)" srcset="images/Banner-tablet.jpg">
     <!-- Desktop: 1025px and up -->
-    <img src="images/Banner-desktop.jpg" alt="Venture57 Design handcrafted woodworking hero image">
+    <img src="images/Banner-desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
+
+    <!-- Centered Hero Text -->
+    <div class="hero-text">V57 Design</div>
   </picture>
 </header>
 
