--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <!-- HERO BANNER SECTION -->
   <picture class="hero-banner">
     <!-- Mobile: up to 600px -->
-    <source media="(max-width: 600px)" srcset="images/Banner-mobile.jpg">
+    <source media="(max-width: 600px)" srcset="images/Skinny-mobile.jpg">
     <!-- Tablet: 601px to 1024px -->
-    <source media="(max-width: 1024px)" srcset="images/Banner-tablet.jpg">
+    <source media="(max-width: 1024px)" srcset="images/Skinny-tablet.jpg">
     <!-- Desktop: 1025px and up -->
-    <img src="images/Banner-desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
+    <img src="images/Skinny-desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
 
     <!-- Centered Hero Text -->
     <div class="hero-text">V57 Design</div>
