--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <section>
             <h2>Contact</h2>
-            <p>Email: info@v57design.com</p>
+            <p>Email: robertgigante@icloud.com</p>
         </section>
     </main>
 
