--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
 </head>
 <body>
 <header>
-  <!-- HERO BANNER SECTION -->
-  <picture class="hero-banner">
-    <!-- Mobile: up to 600px -->
-    <source media="(max-width: 600px)" srcset="images/Skinny-Mobile.jpg">
-    <!-- Tablet: 601px to 1024px -->
-    <source media="(max-width: 1024px)" srcset="images/Skinny-Tablet.jpg">
-    <!-- Desktop: 1025px and up -->
-    <img src="images/Skinny-Desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
-
-    <!-- Centered Hero Text -->
-    <div class="hero-text">V57 Design</div>
-  </picture>
+  <div class="container">
+    <picture class="hero-banner">
+      <source media="(max-width: 600px)" srcset="images/Skinny-Mobile.jpg">
+      <source media="(max-width: 1024px)" srcset="images/Skinny-Tablet.jpg">
+      <img src="images/Skinny-Desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
+      <div class="hero-text">V57 Design</div>
+    </picture>
+  </div>
 </header>
 
     <main>
