--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <main>
         <section>
-            <h2>Our Products</h2>
-            <p>See our custom made woodworking creations — perfect for gifts and home decor.</p>
+            <h2> Our Products</h2>
+            <p>  Coming Soon!</p>
         </section>
 
         <section>
-            <h2>About Us</h2>
-            <p>Venture57 Design is a New Jersey based business specializing in Creative Designs and Quality Craftsmanship.</p>
+            <h2> About Us</h2>
+            <p>  Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers.</p>
         </section>
 
         <section>
-            <h2>Contact</h2>
-            <p>Email: robertgigante@icloud.com</p>
+            <h2> Feel Free to Contact Us About One of a Kind Custom Designs or Creating Branded Products for Your Business </h2>
+            <p>  Email: robertgigante@icloud.com</p>
         </section>
     </main>
 
