--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <main>
         <section>
-            <h2>    Our Products</h2>
-            <p>     Coming Soon!</p>
+            <h2> "   Our Products"</h2>
+            <p>  "   Coming Soon!"</p>
         </section>
 
         <section>
