--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
   </div>
 </header>
 
-    <main>
-        <section>
-            <h2> "   Our Products"</h2>
-            <p>  "   Coming Soon!"</p>
-        </section>
+<main>
+  <div class="container">
+    <section>
+      <h2>Our Products</h2>
+      <p>Coming Soon</p>
+    </section>
 
-        <section>
-            <h2>    About Us</h2>
-            <p>     Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers.</p>
-        </section>
+    <section>
+      <h2>About Us</h2>
+      <p>Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers</p>
+    </section>
 
-        <section>
-            <h2>    Contact us about fulfilling your Custom Design needs or creating branded products for your business </h2>
-            <p>     Email: robertgigante@icloud.com</p>
-        </section>
-    </main>
+    <section>
+      <h2>Contact us about fulfilling your Custom Design needs or creating branded products for your business</h2>
+      <p>Email: robertgigante@icloud.com</p>
+    </section>
+  </div>
+</main>
+    
+
 
     <footer>
         <p>&copy; 2025 Venture57 Design. All rights reserved.</p>
