--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 </main>
     
 
-
-    <footer>
-        <p>&copy; 2025 Venture57 Design. All rights reserved.</p>
-    </footer>
+<footer>
+  <div class="container">
+    <p>&copy; 2025 Venture57 Design. All rights reserved.</p>
+  </div>
+</footer>
+    
 </body>
 </html>
