--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
       <img src="images/Skinny-Desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
       <div class="hero-text">V57 Design</div>
     </picture>
+
+  <!-- Tagline directly under hero banner -->
+  <div class="tagline">
+    Thoughtfully Designed  •  Crafted to Endure
   </div>
 </header>
 
 <main>
   <div class="container">
+    </section>
+      <h2>Thoughfully Designed - Crafted to Endure</h2>  
+      
     <section>
       <h2>Our Products</h2>
       <p>Coming Soon</p>
