--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
     <section>
       <h2>About Us</h2>
-      <p>Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers</p>
+      <p>Thoughtful design. Honest materials. Precision craftsmanship. I build one-of-a-kind furniture and decorative pieces that bring warmth and intention to people's homes. Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers</p>
     </section>
 
     <section>
-      <h2>Contact us about fulfilling your Custom Design needs or creating branded products for your business</h2>
+      <h2>Contact me about fulfilling your Custom Design needs or branded products for your business</h2>
       <p>Email: robertgigante@icloud.com</p>
     </section>
   </div>
