--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Tagline directly under hero banner -->
   <div class="tagline">
     Thoughtfully Designed  •  Crafted to Endure
+    </div>
   </div>
 </header>
 
