--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section>
       <h2>About Us</h2>
-      <p>Thoughtful design. Honest materials. Precision craftsmanship. I build one-of-a-kind furniture and decorative pieces that bring warmth and intention to people's homes. Venture57 Design Specializes in Bringing Creative Designs and Quality Craftsmanship to Our Customers</p>
+      <p>Thoughtful design. Honest materials. Precision craftsmanship. I build one-of-a-kind furniture and decorative pieces that bring warmth and intention to people's homes.</p>
     </section>
 
     <section>
