--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section>
-      <h2>About Us</h2>
+      <h2>About V57 Design</h2>
       <p>Thoughtful design. Honest materials. Precision craftsmanship. I build one-of-a-kind furniture and decorative pieces that bring warmth and intention to people's homes.</p>
     </section>
 
