--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       <h2>Contact me about fulfilling your Custom Design needs or branded products for your business</h2>
       <p>Email: robertgigante@icloud.com</p>
     </section>
+
+    <section>
+      <h2>Sample Link</h2>
+      <p>Go ahead and click it!</p>
+    </section>
+      
   </div>
 </main>
     
