--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </section>
 
     <section>
-      <h2>Contact me about fulfilling your Custom Design needs or branded products for your business</h2>
-      <p>Email: robertgigante@icloud.com</p>
+      <h2>To reach out about custom designs, products, or branded items for your business</h2>
+      <p>Email me at: robertgigante@icloud.com</p>
     </section>
 
     <section>
