--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section>
       <h2>Sample Link</h2>
-      <p>Go ahead and click it!</p>
+      <a href="pages/about.html">LINK</a>
     </section>
       
   </div>
