--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 <body>
 <header>
   <div class="container">
-    <picture class="hero-banner">
-      <source media="(max-width: 700px)" srcset="images/Skinny-Mobile.jpg">
-      <source media="(max-width: 1024px)" srcset="images/Skinny-Tablet.jpg">
-      <img src="images/Skinny-Desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
+    <div class="hero-banner">
+      <!-- picture and hero-text now correctly structured -->
+      <picture>
+        <source media="(max-width: 700px)" srcset="images/Skinny-Mobile.jpg">
+        <source media="(max-width: 1024px)" srcset="images/Skinny-Tablet.jpg">
+        <img src="images/Skinny-Desktop.jpg" alt="V57 Design handcrafted woodworking hero image">
+      </picture>
       <div class="hero-text">V57 Design</div>
-    </picture>
+    </div>
 
-  <!-- Tagline directly under hero banner -->
-  <div class="tagline">
-    Thoughtfully Designed  •  Crafted to Endure
+    <!-- Tagline directly under hero banner -->
+    <div class="tagline">
+      Thoughtfully Designed  •  Crafted to Endure
     </div>
   </div>
 </header>
