--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
 
       <section>
-        <h2>To reach out about custom designs, products, or branded items for your business</h2>
+        <h2>Contact me about products, custom designs, or branded items for your business.</h2>
         <p>Email me at: robertgigante@icloud.com</p>
       </section>
 
