--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <section>
         <h2>Contact me about products, custom designs, or branded items for your business.</h2>
-        <p>Email me at: robertgigante@icloud.com</p>
+        <p>Email me at: rob@V57design.com</p>
       </section>
 
       </div>
